test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-10-21 21:04:34.814000

